fix(sec:xss): remove data-tooltip, etc.

--- a/coral/templates/base-manager.htm
+++ b/coral/templates/base-manager.htm
@@ -350,7 +350,7 @@
                             <a href="{% url 'user_profile_manager' %}"
                                 class="ep-tools ep-tools-login">
                                 <div data-placement="bottom"
-                                    data-toggle="tooltip"
+                                    data-PTW-CVE-2018-14042=""
                                     data-original-title="{% trans 'Profile' %}">
                                     <!-- ko let: {user: '{{ user.first_name|default:user.username }}' }  -->
                                     <span class="hidden-xs h5" data-bind="attr: {'aria-label': $root.translations.welcomeUserEditProfile(user) }"
@@ -382,7 +382,7 @@
                                     openNotifs(event.currentTarget, '#ep-notifs-panel', '#ep-close-notifs-button'); 
                                 }, attr: {'aria-expanded': notifsOpen().toString()},
                             ">
-                                <div data-placement="bottom" data-toggle="tooltip"
+                                <div data-placement="bottom" data-PTW-CVE-2018-14042=""
                                     data-original-title="{% trans 'Notifications' %}">
                                     <div>
                                         <div data-bind="visible: unreadNotifs()" id="circle-outline"></div>
@@ -399,7 +399,7 @@
                         <li>
                             <a href="{% url 'search_home' %}" class="ep-tools ep-tools-right" aria-label="{% trans 'Visit the Search page' %}"
                                 data-bind="click:function () { navigate('{% url 'search_home' %}') }">
-                                <div data-placement="bottom" data-toggle="tooltip" data-original-title="{% trans "Search" %}">
+                                <div data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="{% trans "Search" %}">
                                     <i class="ion-search"></i>
 
                                 </div>
@@ -416,7 +416,7 @@
                                     openEdits(event.currentTarget, '#ep-edits-panel', '#ep-close-edits-button');
                                 }, attr: {'aria-expanded': editsOpen().toString()},
                             ">
-                                <div data-placement="bottom" data-toggle="tooltip" data-original-title="{% trans "My Recent Edits" %}">
+                                <div data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="{% trans "My Recent Edits" %}">
                                     <i class="ion-clock"></i>
                                 </div>
                             </button>
@@ -427,7 +427,7 @@
                         <li>
                             <a href="{% url 'resource_editor' resourceid %}" class="ep-tools ep-tools-right"
                                 data-bind="click:function () { navigate('{% url 'resource_editor' resourceid %}') }" aria-label="{% trans 'Edit Resource' %}">
-                                <div data-placement="bottom" data-toggle="tooltip" data-original-title="{% trans "Edit Resource" %}">
+                                <div data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="{% trans "Edit Resource" %}">
                                     <i class="ion-edit"></i>
                                 </div>
                             </a>
@@ -438,7 +438,7 @@
                         <li>
                             <a href="{% url 'resource_report' resourceid %}" class="ep-tools ep-tools-right"
                                 data-bind="click:function () { navigate('{% url 'resource_report' resourceid %}') }" aria-label="{% trans 'View Report' %}">
-                                <div data-placement="bottom" data-toggle="tooltip" data-original-title="{% trans "View Report" %}">
+                                <div data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="{% trans "View Report" %}">
                                     <i class="ion-android-document"></i>
                                 </div>
                             </a>
@@ -448,7 +448,7 @@
                         {% if nav.print %}
                         <li>
                             <button class="ep-tools ep-tools-right" data-bind="click: function() { window.print() }" aria-label="{% trans 'Print the page' %}">
-                                <div data-placement="bottom" data-toggle="tooltip" data-original-title="{% trans "Print" %}">
+                                <div data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="{% trans "Print" %}">
                                     <i class="ion-printer"></i>
                                 </div>
                             </button>
@@ -463,7 +463,7 @@
                                     openHelp({{ nav.help.templates }}, event.currentTarget, '#ep-help-panel', '#ep-close-help-button');
                                 }, attr: { 'aria-expanded': helpOpen().toString()},
                             ">
-                                <div data-placement="bottom" data-toggle="tooltip" data-original-title="{% trans "Help" %}">
+                                <div data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="{% trans "Help" %}">
                                     <i class="ion-help"></i>
                                 </div>
                             </button>
@@ -478,7 +478,7 @@
                                 class="ep-help-toggle ep-tools ep-tools-right"
                                 aria-label="{% trans 'Login' %}"
                             >
-                                <div data-placement="bottom" data-toggle="tooltip" data-original-title="{% trans 'Login' %}">
+                                <div data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="{% trans 'Login' %}">
                                     <i class="ion-log-in"></i>
                                 </div>
                             </a>
@@ -488,7 +488,7 @@
                                 class="ep-help-toggle ep-tools ep-tools-right"
                                 aria-label="{% trans 'Logout' %}"
                             >
-                                <div data-placement="bottom" data-toggle="tooltip" data-original-title="{% trans 'Logout' %}">
+                                <div data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="{% trans 'Logout' %}">
                                     <i class="ion-log-out"></i>
                                 </div>
                             </a>
@@ -510,7 +510,7 @@
                     <a href="javascript:void(0);" id="ep-close-notifs-button" role="button" aria-label="{% trans 'Close Notifications' %}"
                         class="ep-notifs-toggle ep-notifs-close ep-tools ep-tools-right" data-bind="click: closeNotifs"
                     >
-                        <div data-placement="bottom" data-toggle="tooltip" data-original-title="{% trans "Close" %}">
+                        <div data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="{% trans "Close" %}">
                             <i class="fa fa-times-circle fa-lg"></i>
                         </div>
                     </a>
@@ -535,7 +535,7 @@
                     <a href="javascript:void(0);" id="ep-close-edits-button" role="button" style="border:none;" aria-label="{% trans 'Close Edit History' %}"
                         class="ep-edits-toggle ep-edits-close ep-tools ep-tools-right" data-bind="click: closeEdits"
                     >
-                        <div data-placement="bottom" data-toggle="tooltip" data-original-title="{% trans "Close" %}">
+                        <div data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="{% trans "Close" %}">
                             <i class="fa fa-times-circle fa-lg"></i>
                         </div>
                     </a>
@@ -559,7 +559,7 @@
                     <a href="javascript:void(0);" id="ep-close-help-button" role="button" style="border:none" aria-label="{% trans 'Close Help' %}"
                         class="ep-help-toggle ep-help-close ep-tools ep-tools-right" data-bind="click: closeHelp"
                     >
-                        <div data-placement="bottom" data-toggle="tooltip" data-original-title="{% trans "Close Help" %}">
+                        <div data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="{% trans "Close Help" %}">
                             <i class="fa fa-times-circle fa-lg"></i>
                         </div>
                     </a>
