--- a/coral/templates/views/components/workflows/file-template.htm
+++ b/coral/templates/views/components/workflows/file-template.htm
@@ -47,7 +47,7 @@
       class="fa fa-plus-circle add-new-tile"
       role="presentation"
       data-bind="css:{'jstree-clicked': self.card.selected}, click: function(){self.card.showForm(true);}, clickBubble: false"
-      data-toggle="tooltip"
+      data-PTW-CVE-2018-14042=""
       data-original-title="$root.translations.addGnu"
     ></i>
     <!-- /ko -->
