--- a/coral/templates/views/components/notification.htm
+++ b/coral/templates/views/components/notification.htm
@@ -80,7 +80,7 @@
 
     <div class='entry relative'>
         <a href="javascript:void(0);" data-bind="click: function() { dismiss($parents[1]) }" class="ep-notifs-toggle ep-notifs-close">
-            <div class="" data-placement="bottom" data-toggle="tooltip" data-original-title="$root.translations.dismiss">
+            <div class="" data-placement="bottom" data-PTW-CVE-2018-14042="" data-original-title="$root.translations.dismiss">
                 <i class="fa fa-times-circle fa-sm"></i>
             </div>
         </a>
